--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,6 +34,7 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@zerodevx/svelte-toast": "^0.7.2",
 		"cookie": "^0.4.1",
-		"ethers": "^5.7.0"
+		"ethers": "^5.7.0",
+		"svelte-loading-spinners": "^0.1.7"
 	}
 }
