--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -35,5 +35,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3"
+  },
+  "exports": {
+    "./typechain": "./typechain-types"
   }
 }
